--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dayjs": "^1.11.9",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.7.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1"
   },
@@ -25,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.28",
     "react-router-dom": "^6.15.0",
+    "sass": "^1.66.1",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
