--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-paginate": "^8.2.0"
+    "react-paginate": "^8.2.0",
+    "react-player": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
